[package]
name = "miraplex-token-auth-rules"
version = "1.3.2"
description = "MPL Token Authorization Rules that can be used to restrict common token operations"
authors = ["Metaplex Developers <dev@metaplex.com>"]
repository = "https://github.com/miraland-labs/miraplex-token-auth-rules.git"
license-file = "../LICENSE"
edition = "2021"
readme = "../README.md"
keywords = ["nft", "miraplex", "miraland", "solarti", "blockchain"]

[dependencies]
miraland-program = "=1.14.17-rc5"
shank = "0.0.11"
borsh = "0.9.3"
thiserror = "1.0"
num-derive = "0.3.3"
num-traits = "0.2"
serde = { version = "1.0.149", features = ["derive"]}
serde_with = { version = "1.14.0", optional = true }
rmp-serde = "1.1.1"
miraplex-token-metadata-context-derive = "0.2.1"
miraland-zk-token-sdk = "=1.14.17-rc5"
bytemuck = "1.13.1"

[features]
no-entrypoint = []
test-bpf = []
serde-with-feature = ["serde_with"]

[dev-dependencies]
assert_matches = "1.5.0"
miraland-program-test = "=1.14.17-rc5"
miraland-sdk = "=1.14.17-rc5"
miraland-logger = "=1.14.17-rc5"
solarti-token = { version = "3.5", features = [ "no-entrypoint" ] }
serde_json = "1.0.87"
solarti-associated-token-account = { version = "1.1", features = ["no-entrypoint"] }

[lib]
crate-type = ["cdylib", "lib"]
name = "mpl_token_auth_rules"

[profile.release]
overflow-checks = true     # Enable integer overflow checks.
